big daily update

--- a/Python_notebooks/navis_float_ftp_download.ipynb
+++ b/Python_notebooks/navis_float_ftp_download.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,14 @@
     "transport = paramiko.Transport((host,port))\n",
     "\n",
     "# Auth\n",
-    "username,password = \"s_f1102\",\"hckrJHGY\"\n",
+    "#username,password = \"s_f1102\",\"hckrJHGY\"\n",
+    "username, password = 's_f1101', 'KhuBGFTj'\n",
     "transport.connect(None,username,password)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,334 +38,321 @@
      "output_type": "stream",
      "text": [
       "Files in /:\n",
-      "1102.043.isus\n",
-      "1102.2207170118\n",
-      "1102.020.msg\n",
-      "1102.089.msg\n",
-      "1102.087.isus\n",
-      "1102.080.log\n",
-      "1102.010.msg\n",
-      "1102.009.isus\n",
-      "1102.088.isus\n",
-      "1102.063.isus\n",
-      "1102.023.msg\n",
-      "1102.013.msg\n",
-      "1102.2206211049\n",
-      "1102.009.log\n",
+      "1101.077.isus\n",
+      "1101.087.log\n",
+      "1101.061.msg\n",
+      "1101.003.msg\n",
+      "1101.049.msg\n",
+      "1101.029.isus\n",
+      "1101.073.msg\n",
+      "1101.2207250221.log\n",
+      "1101.2207250341.log\n",
+      "1101.2204270739.log\n",
+      "1101.019.msg\n",
       "backups\n",
-      "1102.046.log\n",
-      "1102.003.msg\n",
-      "1102.060.msg\n",
-      "1102.086.isus\n",
-      "1102.2207170139\n",
-      "1102.042.isus\n",
-      "1102.083.isus\n",
-      "1102.012.log\n",
-      "1102.024.isus\n",
-      "1102.048.msg\n",
-      "1102.052.log\n",
-      "1102.090.msg\n",
-      "1102.088.log\n",
-      "1102.2207170158.log\n",
-      "1102.027.log\n",
-      "1102.084.log\n",
-      "1102.075.isus\n",
-      "1102.047.log\n",
-      "1102.045.isus\n",
-      "1102.068.msg\n",
-      "1102.089.isus\n",
-      "1102.057.isus\n",
-      "1102.070.log\n",
-      "1102.049.msg\n",
-      "1102.076.msg\n",
-      "1102.064.isus\n",
-      "1102.041.log\n",
-      "1102.001.isus\n",
-      "1102.2207170038\n",
-      "1102.2207162228\n",
-      "1102.2207170158\n",
+      "1101.007.msg\n",
+      "1101.079.log\n",
+      "1101.036.isus\n",
+      "1101.053.log\n",
+      "1101.065.msg\n",
+      "1101.2204270739\n",
+      "1101.2207250421\n",
+      "1101.061.log\n",
+      "1101.005.msg\n",
+      "1101.034.msg\n",
+      "1101.071.msg\n",
+      "1101.032.msg\n",
+      "1101.2207250055.log\n",
+      "1101.042.log\n",
+      "1101.050.isus\n",
+      "1101.052.msg\n",
+      "1101.030.isus\n",
+      "1101.000.msg\n",
+      "1101.086.log\n",
+      "1101.088.isus\n",
+      "1101.048.log\n",
+      "1101.024.msg\n",
+      "1101.049.isus\n",
+      "1101.065.log\n",
+      "1101.013.log\n",
+      "1101.032.log\n",
+      "1101.057.log\n",
+      "1101.027.isus\n",
+      "1101.060.log\n",
+      "1101.014.isus\n",
+      "1101.010.msg\n",
       ".MakeCmd\n",
-      "1102.2206160929\n",
-      "1102.2207162330.log\n",
-      "1102.2206211123\n",
-      "1102.050.isus\n",
-      "1102.024.log\n",
-      "1102.053.log\n",
-      "1102.078.msg\n",
-      "1102.005.msg\n",
+      "1101.057.isus\n",
+      "1101.072.isus\n",
+      "1101.084.isus\n",
+      "1101.056.msg\n",
       ".bash_logout\n",
-      "1102.2207170038.log\n",
-      "1102.019.log\n",
-      "1102.2207162356.log\n",
-      "1102.017.msg\n",
-      "1102.007.log\n",
-      "1102.014.isus\n",
-      "1102.042.msg\n",
-      "1102.058.isus\n",
-      "1102.017.log\n",
-      "1102.043.msg\n",
-      "1102.073.msg\n",
-      "1102.067.isus\n",
-      "1102.037.log\n",
-      "1102.018.log\n",
-      "1102.039.msg\n",
-      "1102.2207170017\n",
-      "1102.003.isus\n",
-      "1102.031.isus\n",
-      "1102.010.isus\n",
-      "1102.006.log\n",
-      "1102.011.isus\n",
+      "1101.081.msg\n",
+      "1101.047.msg\n",
+      "1101.041.msg\n",
+      "1101.025.log\n",
+      "1101.063.log\n",
+      "1101.009.isus\n",
+      "1101.053.isus\n",
+      "1101.075.msg\n",
+      "1101.014.log\n",
+      "1101.033.isus\n",
+      "1101.004.msg\n",
+      "1101.059.log\n",
+      "1101.074.msg\n",
       ".sxrc\n",
-      "1102.065.msg\n",
-      "1102.072.msg\n",
-      "1102.077.isus\n",
-      "1102.035.log\n",
-      "1102.016.isus\n",
-      "1102.091.msg\n",
-      "1102.006.msg\n",
-      "1102.007.isus\n",
-      "1102.040.log\n",
-      "1102.086.msg\n",
-      "1102.092.msg\n",
-      "1102.091.log\n",
-      "1102.000.msg\n",
+      "1101.045.log\n",
+      "1101.024.log\n",
+      "1101.011.log\n",
+      "1101.036.msg\n",
+      "1101.037.log\n",
+      "1101.2204270834\n",
       ".history\n",
-      "1102.2206211049.log\n",
-      "1102.013.isus\n",
-      "1102.050.msg\n",
-      "1102.044.isus\n",
-      "1102.037.msg\n",
-      "1102.035.msg\n",
-      "1102.040.msg\n",
-      "mission.cfg_2022_01_31\n",
-      "1102.028.isus\n",
-      "1102.018.isus\n",
-      "1102.092.isus\n",
-      "1102.027.msg\n",
-      "1102.2207170118.log\n",
+      "1101.2207250037.log\n",
+      "1101.043.log\n",
+      "1101.2206161208\n",
+      "1101.042.isus\n",
+      "1101.084.msg\n",
+      "1101.055.log\n",
+      "1101.041.isus\n",
+      "1101.010.isus\n",
+      "1101.011.msg\n",
+      "1101.028.log\n",
+      "1101.023.log\n",
+      "1101.031.isus\n",
       ".bash_profile\n",
-      "1102.063.log\n",
-      "1102.056.msg\n",
-      "1102.067.msg\n",
-      "1102.2206281303.log\n",
-      "1102.062.isus\n",
-      "1102.084.isus\n",
-      "1102.019.msg\n",
-      "mission160223.cfg\n",
-      "mission.cfg_2022_07_27\n",
-      "1102.021.msg\n",
-      "1102.032.msg\n",
-      "1102.2207162246\n",
-      "1102.040.isus\n",
-      "1102.049.log.tmp\n",
+      "1101.020.msg\n",
+      "1101.2204270946\n",
+      "1101.007.log\n",
+      "1101.012.log\n",
+      "1101.2204270828.log\n",
+      "1101.038.log\n",
+      "1101.054.log\n",
+      "1101.070.log\n",
+      "1101.068.isus\n",
+      "1101.083.isus\n",
+      "1101.015.msg\n",
+      "1101.037.isus\n",
+      "1101.071.log\n",
+      "1101.023.msg\n",
+      "1101.2204270938\n",
+      "1101.056.isus\n",
+      "1101.045.msg\n",
+      "1101.044.log\n",
+      "1101.026.log\n",
+      "mission131222.cfg\n",
+      "1101.087.isus\n",
+      "1101.059.isus\n",
+      "1101.064.msg\n",
+      "1101.069.isus\n",
+      "1101.019.log\n",
       "logs\n",
-      "1102.061.msg\n",
-      "1102.025.log\n",
-      "1102.014.msg\n",
-      "mission060922.cfg\n",
-      "1102.055.log\n",
-      "1102.058.log\n",
-      "1102.048.log\n",
-      "1102.092.log\n",
-      "1102.038.msg\n",
+      "1101.006.log\n",
+      "1101.088.msg\n",
+      "1101.2207250055\n",
+      "1101.018.log\n",
+      "1101.012.isus\n",
+      "1101.024.isus\n",
+      "1101.038.isus\n",
       ".rxrc\n",
-      "1102.082.isus\n",
-      "1102.028.log\n",
-      "1102.052.msg\n",
-      "1102.076.isus\n",
-      "1102.074.log\n",
-      "1102.2207162330\n",
-      "1102.030.isus\n",
-      "1102.000.log\n",
-      "1102.064.msg\n",
-      "1102.051.msg\n",
-      "1102.2206210845\n",
-      "1102.003.log\n",
-      "1102.011.log\n",
-      "1102.042.log\n",
-      "1102.2206210845.log\n",
-      "1102.057.msg\n",
-      "1102.051.isus\n",
-      "1102.075.msg\n",
-      "1102.051.log\n",
-      "1102.081.isus\n",
-      "1102.075.log\n",
-      "1102.068.log\n",
-      "1102.047.msg\n",
-      "1102.023.isus\n",
-      "1102.049.isus\n",
-      "1102.2207170017.log\n",
-      "1102.065.isus\n",
-      "1102.009.msg\n",
-      "1102.012.msg\n",
-      "1102.014.log\n",
-      "1102.004.log\n",
-      "1102.033.log\n",
-      "1102.065.log\n",
-      "1102.053.msg\n",
-      "1102.082.log\n",
-      "1102.044.log\n",
-      "1102.078.isus\n",
-      "1102.002.log\n",
-      "1102.031.msg\n",
-      "1102.017.isus\n",
-      "1102.066.isus\n",
-      "1102.071.log\n",
-      "1102.029.log\n",
-      "1102.015.log\n",
+      "1101.075.isus\n",
+      "1101.067.isus\n",
+      "1101.056.log\n",
+      "1101.069.log\n",
+      "1101.043.isus\n",
+      "1101.006.isus\n",
+      "1101.067.log\n",
+      "1101.058.msg\n",
+      "1101.086.isus\n",
+      "1101.2206161217\n",
+      "1101.002.msg\n",
+      "1101.044.msg\n",
+      "1101.046.msg\n",
+      "1101.034.log\n",
+      "1101.2207250136\n",
+      "1101.2204270834.log\n",
+      "1101.008.log\n",
+      "1101.055.isus\n",
+      "1101.068.msg\n",
+      "1101.071.isus\n",
+      "1101.051.msg\n",
+      "1101.018.msg\n",
+      "1101.085.isus\n",
+      "1101.087.msg\n",
+      "1101.012.msg\n",
+      "1101.062.isus\n",
+      "1101.000.log\n",
+      "1101.060.msg\n",
+      "1101.050.msg\n",
       ".logout\n",
-      "1102.080.msg\n",
-      "1102.074.msg\n",
-      "1102.085.isus\n",
-      "1102.012.isus\n",
-      "1102.062.log\n",
-      "1102.070.msg\n",
-      "1102.059.log\n",
-      "1102.043.log\n",
-      "1102.054.isus\n",
-      "1102.059.isus\n",
-      "1102.056.isus\n",
-      "1102.072.isus\n",
-      "1102.083.log\n",
-      "1102.008.msg\n",
-      "1102.001.log\n",
-      "1102.041.msg\n",
-      "1102.034.msg\n",
-      "1102.046.msg\n",
-      "1102.053.isus\n",
-      "1102.081.log\n",
-      "1102.020.log\n",
-      "1102.016.msg\n",
-      "1102.021.log\n",
-      "1102.2207162356\n",
-      "1102.045.log\n",
-      "1102.091.isus\n",
-      "1102.080.isus\n",
-      "1102.074.isus\n",
-      "1102.2206281259\n",
-      "1102.071.isus\n",
-      "1102.090.log\n",
-      "1102.072.log\n",
-      "1102.2207162228.log\n",
-      "1102.038.isus\n",
-      "1102.2206281223\n",
-      "1102.033.msg\n",
-      "1102.022.log\n",
-      "1102.078.log\n",
-      "1102.024.msg\n",
-      "1102.015.msg\n",
-      "1102.022.msg\n",
-      "1102.007.msg\n",
-      "1102.025.isus\n",
+      "1101.060.isus\n",
+      "1101.021.log\n",
+      "1101.041.log\n",
+      "1101.009.log\n",
+      "1101.016.log\n",
+      "1101.054.isus\n",
+      "1101.081.isus\n",
+      "1101.070.isus\n",
+      "1101.035.msg\n",
+      "1101.081.log\n",
+      "1101.001.msg\n",
+      "1101.033.msg\n",
+      "1101.066.isus\n",
+      "1101.026.msg\n",
+      "1101.037.msg\n",
+      "1101.051.isus\n",
+      "1101.066.log\n",
+      "1101.088.log\n",
+      "1101.083.msg\n",
+      "1101.080.isus\n",
+      "1101.013.isus\n",
+      "1101.004.log\n",
+      "1101.003.log\n",
+      "1101.080.log\n",
+      "1101.044.isus\n",
+      "1101.007.isus\n",
+      "1101.059.msg\n",
+      "1101.074.log\n",
+      "1101.022.msg\n",
+      "1101.083.log\n",
+      "1101.082.msg\n",
+      "1101.076.log\n",
+      "1101.057.msg\n",
+      "1101.064.log\n",
+      "1101.063.isus\n",
+      "1101.2207250303\n",
+      "1101.025.msg\n",
+      "1101.2207250243.log\n",
+      "1101.063.msg\n",
+      "1101.2204261218.log\n",
+      "1101.068.log\n",
+      "1101.027.log\n",
+      "1101.2207250401\n",
+      "1101.2206161208.log\n",
+      "1101.082.isus\n",
+      "1101.020.isus\n",
+      "1101.019.isus\n",
+      "1101.016.isus\n",
+      "1101.072.log\n",
+      "1101.021.msg\n",
+      "1101.079.msg\n",
+      "1101.2207250322.log\n",
+      "1101.052.log\n",
+      "1101.069.msg\n",
+      "1101.049.log\n",
+      "1101.009.msg\n",
+      "1101.047.isus\n",
+      "1101.079.isus\n",
+      "1101.078.log\n",
+      "1101.2207250221\n",
+      "1101.053.msg\n",
       ".cshrc\n",
-      "1102.069.msg\n",
-      "1102.077.log\n",
-      "1102.068.isus\n",
-      "1102.2206281303\n",
-      "1102.063.msg\n",
-      "1102.062.msg\n",
-      "1102.021.isus\n",
-      "1102.059.msg\n",
-      "1102.036.log\n",
-      "1102.036.msg\n",
-      "1102.001.msg\n",
-      "1102.073.isus\n",
-      "1102.079.isus\n",
-      "1102.069.log\n",
-      "1102.044.msg\n",
-      "1102.002.isus\n",
-      "1102.010.log\n",
-      "1102.071.msg\n",
-      "1102.005.isus\n",
-      "1102.025.msg\n",
-      "1102.033.isus\n",
-      "1102.005.log\n",
-      "1102.061.log\n",
-      "1102.058.msg\n",
-      "1102.026.isus\n",
-      "1102.004.msg\n",
-      "1102.023.log\n",
-      "1102.2206211123.log\n",
-      "1102.013.log\n",
-      "1102.070.isus\n",
-      "1102.2206281153.log\n",
-      "1102.027.isus\n",
-      "1102.050.log\n",
-      "1102.2206281223.log\n",
-      "1102.026.log\n",
-      "1102.2207162246.log\n",
+      "1101.043.msg\n",
+      "1101.018.isus\n",
+      "1101.023.isus\n",
+      "1101.040.log\n",
+      "1101.078.msg\n",
+      "1101.062.msg\n",
+      "1101.008.msg\n",
+      "1101.047.log\n",
+      "1101.031.msg\n",
+      "1101.028.isus\n",
+      "1101.084.log\n",
+      "1101.027.msg\n",
+      "1101.072.msg\n",
+      "1101.2207250136.log\n",
+      "1101.2207250421.log\n",
+      "1101.2206211052\n",
+      "1101.086.msg\n",
+      "1101.085.log\n",
+      "1101.010.log\n",
+      "1101.080.msg\n",
+      "1101.033.log\n",
+      "1101.2204261104.log\n",
+      "1101.025.isus\n",
+      "1101.022.log\n",
+      "1101.2207250157.log\n",
+      "1101.077.msg\n",
+      "1101.005.isus\n",
+      "1101.017.isus\n",
+      "1101.085.msg\n",
+      "1101.050.log\n",
       ".bashrc\n",
-      "1102.066.msg\n",
-      "1102.004.isus\n",
-      "1102.087.log\n",
-      "1102.011.msg\n",
-      "1102.2206160929.log\n",
-      "1102.045.msg\n",
-      "1102.030.msg\n",
-      "1102.032.isus\n",
-      "1102.061.isus\n",
-      "1102.035.isus\n",
-      "1102.056.log\n",
-      "1102.084.msg\n",
-      "1102.055.msg\n",
-      "1102.064.log\n",
-      "1102.028.msg\n",
-      "1102.2207170058\n",
-      "1102.032.log\n",
-      "1102.067.log.tmp\n",
-      "1102.006.isus\n",
-      "1102.029.msg\n",
-      "1102.088.msg\n",
-      "1102.2207170058.log\n",
-      "1102.085.log\n",
-      "1102.076.log\n",
-      "1102.020.isus\n",
-      "1102.054.log\n",
-      "1102.060.isus\n",
-      "1102.038.log.tmp\n",
-      "1102.019.isus\n",
-      "1102.073.log\n",
-      "1102.034.log\n",
-      "1102.085.msg\n",
-      "1102.087.msg\n",
-      "1102.036.isus\n",
-      "1102.090.isus\n",
-      "1102.002.msg\n",
-      "1102.039.log\n",
-      "1102.2206281153\n",
-      "1102.041.isus\n",
-      "1102.008.isus\n",
-      "1102.079.log\n",
-      "1102.079.msg\n",
-      "1102.082.msg\n",
-      "1102.018.msg\n",
-      "1102.015.isus\n",
-      "1102.069.isus\n",
-      "1102.016.log\n",
-      "1102.034.isus\n",
-      "1102.022.isus\n",
-      "1102.039.isus\n",
-      "1102.037.isus\n",
-      "1102.060.log\n",
-      "1102.008.log\n",
-      "1102.026.msg\n",
-      "1102.086.log\n",
-      "1102.066.log\n",
-      "1102.2207170139.log\n",
-      "1102.083.msg\n",
-      "1102.048.isus\n",
-      "1102.055.isus\n",
-      "1102.089.log\n",
-      "1102.046.isus\n",
-      "1102.052.isus\n",
-      "1102.031.log\n",
-      "1102.029.isus\n",
-      "1102.047.isus\n",
-      "1102.081.msg\n",
-      "1102.030.log\n",
-      "1102.054.msg\n",
-      "1102.057.log\n",
-      "1102.077.msg\n"
+      "1101.001.log\n",
+      "1101.061.isus\n",
+      "1101.076.msg\n",
+      "1101.014.msg\n",
+      "1101.036.log\n",
+      "1101.042.msg\n",
+      "1101.045.isus\n",
+      "1101.062.log\n",
+      "1101.028.msg\n",
+      "1101.029.log\n",
+      "1101.052.isus\n",
+      "1101.021.isus\n",
+      "1101.082.log\n",
+      "1101.002.isus\n",
+      "1101.2207250341\n",
+      "1101.2204270938.log\n",
+      "1101.074.isus\n",
+      "1101.035.isus\n",
+      "1101.015.isus\n",
+      "1101.035.log\n",
+      "1101.003.isus\n",
+      "1101.034.isus\n",
+      "1101.011.isus\n",
+      "1101.008.isus\n",
+      "1101.022.isus\n",
+      "1101.2204261218\n",
+      "1101.051.log\n",
+      "1101.076.isus\n",
+      "1101.006.msg\n",
+      "1101.054.msg\n",
+      "1101.058.log\n",
+      "1101.2207250243\n",
+      "1101.077.log\n",
+      "1101.039.log\n",
+      "1101.055.msg\n",
+      "1101.2207250037\n",
+      "1101.2207250322\n",
+      "1101.046.log\n",
+      "1101.030.log\n",
+      "1101.039.isus\n",
+      "1101.065.isus\n",
+      "1101.2207250401.log\n",
+      "1101.067.msg\n",
+      "1101.039.msg\n",
+      "1101.017.log\n",
+      "1101.032.isus\n",
+      "1101.031.log\n",
+      "1101.064.isus\n",
+      "1101.038.msg\n",
+      "1101.078.isus\n",
+      "1101.020.log\n",
+      "1101.046.isus\n",
+      "1101.2207250303.log\n",
+      "1101.048.msg\n",
+      "1101.016.msg\n",
+      "1101.048.isus\n",
+      "1101.001.isus\n",
+      "1101.002.log\n",
+      "1101.040.isus\n",
+      "1101.017.msg\n",
+      "1101.015.log\n",
+      "1101.030.msg\n",
+      "1101.2207250157\n",
+      "1101.070.msg\n",
+      "1101.026.isus\n",
+      "1101.058.isus\n",
+      "1101.013.msg\n",
+      "1101.004.isus\n",
+      "1101.073.log\n",
+      "1101.040.msg\n",
+      "1101.075.log\n",
+      "1101.073.isus\n",
+      "1101.066.msg\n",
+      "1101.005.log\n",
+      "1101.029.msg\n"
      ]
     }
    ],
