Updated processing pipeline for float data. Improved CMEMS visualisation to include both float and deployed autonomy.

--- a/Python_notebooks/CMEMS_sat_vis_with_autonomy.ipynb
+++ b/Python_notebooks/CMEMS_sat_vis_with_autonomy.ipynb
@@ -81,14 +81,14 @@
     "        'navis101': '#FBFF1F'}\n",
     "\n",
     "# CHLA\n",
-    "skip_chla            = False\n",
+    "skip_chla            = True\n",
     "CHLA_color           = 'YlGnBu_r'\n",
     "CHLA_plot_as_log     = True # Default True\n",
     "CHLA_plot_lim_max    = 10   # Default 10\n",
     "CHLA_plot_lim_min    = 0.1  # Default 0.1\n",
     "\n",
     "# SST\n",
-    "skip_sst             = False\n",
+    "skip_sst             = True\n",
     "SST_color            = 'YlOrRd'\n",
     "SST_plot_as_log      = False # Default False\n",
     "SST_plot_lim_max     = 15    # Default 15\n",
@@ -102,7 +102,7 @@
     "SSH_plot_lim_min     = -0.5  # Default -0.5\n",
     "\n",
     "# Surface Currents\n",
-    "skip_ssc             = False\n",
+    "skip_ssc             = True\n",
     "SSC_color            = 'YlGnBu_r'\n",
     "SSC_plot_as_log      = False # Default False\n",
     "SSC_plot_lim_max     = 5   # Default 5\n",
@@ -116,7 +116,7 @@
     "BBP_plot_lim_min     = 0.0001\n",
     "\n",
     "# PIC\n",
-    "skip_pic             = False\n",
+    "skip_pic             = True\n",
     "PIC_color            = 'YlGnBu_r'\n",
     "PIC_plot_as_log      = True\n",
     "PIC_plot_lim_max     = 0.1\n",
@@ -157,46 +157,7 @@
       "CMEMS_cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D_April-May2024.nc\n",
       "['CHL', 'CHL_uncertainty', 'DIATO', 'DIATO_uncertainty', 'DINO', 'DINO_uncertainty', 'GREEN', 'GREEN_uncertainty', 'HAPTO', 'HAPTO_uncertainty', 'MICRO', 'MICRO_uncertainty', 'NANO', 'NANO_uncertainty', 'PICO', 'PICO_uncertainty', 'PROCHLO', 'PROCHLO_uncertainty', 'PROKAR', 'PROKAR_uncertainty', 'flags']\n",
       "CMEMS_cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D_April-May2024.nc\n",
-      "['adt', 'err_sla', 'err_ugosa', 'err_vgosa', 'flag_ice', 'sla', 'ugos', 'ugosa', 'vgos', 'vgosa']\n",
-      "dissic\n",
-      "ph\n",
-      "talk\n",
-      "BBP\n",
-      "BBP_uncertainty\n",
-      "CDM\n",
-      "CDM_uncertainty\n",
-      "flags\n",
-      "CHL\n",
-      "CHL_uncertainty\n",
-      "DIATO\n",
-      "DIATO_uncertainty\n",
-      "DINO\n",
-      "DINO_uncertainty\n",
-      "GREEN\n",
-      "GREEN_uncertainty\n",
-      "HAPTO\n",
-      "HAPTO_uncertainty\n",
-      "MICRO\n",
-      "MICRO_uncertainty\n",
-      "NANO\n",
-      "NANO_uncertainty\n",
-      "PICO\n",
-      "PICO_uncertainty\n",
-      "PROCHLO\n",
-      "PROCHLO_uncertainty\n",
-      "PROKAR\n",
-      "PROKAR_uncertainty\n",
-      "flags\n",
-      "adt\n",
-      "err_sla\n",
-      "err_ugosa\n",
-      "err_vgosa\n",
-      "flag_ice\n",
-      "sla\n",
-      "ugos\n",
-      "ugosa\n",
-      "vgos\n",
-      "vgosa\n"
+      "['adt', 'err_sla', 'err_ugosa', 'err_vgosa', 'flag_ice', 'sla', 'ugos', 'ugosa', 'vgos', 'vgosa']\n"
      ]
     }
    ],
@@ -274,7 +235,6 @@
     "        for key_variable, details in variables.items():\n",
     "            data_var = details['variable']\n",
     "            var_name_lower = data_var.lower()\n",
-    "            print(data_var)\n",
     "            if 'chl' in var_name_lower and var_name_lower == 'chl':\n",
     "                var_dict['chl'][file] = data_var\n",
     "            elif 'temp' in var_name_lower:\n",
@@ -301,79 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/6 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chl\n",
-      "chl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 17%|█▋        | 1/6 [00:57<04:49, 57.82s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sla\n",
-      "sla\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 3/6 [01:34<01:25, 28.50s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adt\n",
-      "adt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 4/6 [02:25<01:12, 36.35s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dissic\n",
-      "dissic\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6/6 [03:04<00:00, 30.74s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Plotting loop\n",
+    "# Further presets\n",
     "\n",
     "zoom_plot = False\n",
     "\n",
@@ -385,7 +277,7 @@
     "circle_lats, circle_lons = circle_points[:, 0], circle_points[:, 1]\n",
     "\n",
     "# Load float positions\n",
-    "float_position_path = os.path.join(floats_dir, 'Float_positions_2024_05_25.csv')\n",
+    "float_position_path = os.path.join(floats_dir, 'Float_positions.csv')\n",
     "full_position = pd.read_csv(float_position_path)\n",
     "\n",
     "# Convert the 'time' column to datetime\n",
@@ -416,7 +308,57 @@
     "    min_lon = -24.05 #-35\n",
     "    max_lon = -23.85 #-5\n",
     "    min_lat = 59.9 #55\n",
-    "    max_lat = 60.1 #66\n",
+    "    max_lat = 60.1 #66\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/6 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sla\n",
+      "sla\n",
+      "sla\n",
+      "sla\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 3/6 [01:30<01:30, 30.21s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adt\n",
+      "adt\n",
+      "adt\n",
+      "adt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6/6 [03:44<00:00, 37.42s/it]\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "for var_category, files in tqdm(var_dict.items()):\n",
     "\n",
@@ -433,7 +375,7 @@
     "    if skip_ssc and var_category == 'ast':\n",
     "        continue\n",
     "\n",
-    "    for day_offset in [-2, -1]:  # Plot the last two days\n",
+    "    for day_offset in [-4, -3, -2, -1]:  # Plot the last two days\n",
     "        if len(files) > 1:\n",
     "            data_vars = []\n",
     "            for file, data_var in files.items():\n",
@@ -569,6 +511,7 @@
     "        df_filtered = df[df['date'] <= date_of_plot_filter]\n",
     "\n",
     "        legend_handles = []\n",
+    "\n",
     "        # Process each unique object type\n",
     "        for obj_type, symbol in object_symbols.items():\n",
     "\n",
@@ -608,6 +551,36 @@
     "                # Create a proxy artist for each object\n",
     "                proxy = plt.Line2D([0], [0], linestyle='-', marker=symbol, color=object_colors.get(name, '#000000'), label=name)\n",
     "                legend_handles.append(proxy)\n",
+    "\n",
+    "        unique_floats = full_position['float'].unique()\n",
+    "        full_position['JULD']  = pd.to_datetime(full_position['JULD'])\n",
+    "        full_position_filtered = full_position[full_position['JULD'] <= date_of_plot_filter]\n",
+    "        \n",
+    "        # Plot each float's positions\n",
+    "        for float_name in unique_floats:\n",
+    "            float_data = full_position_filtered[full_position_filtered['float'] == float_name].sort_values(by='JULD', ascending=False)  # Sort in descending order\n",
+    "\n",
+    "            # Get the colors and opacities for the points\n",
+    "            rgba_color = to_rgba(float_colors.get(float_name, '#000000'))  # Default to black if not found\n",
+    "            num_positions = len(float_data)\n",
+    "            alphas = np.linspace(1, 0.1, min(num_positions, 9))  # Reverse the opacity gradient\n",
+    "\n",
+    "            # Plot the positions and lines, with the first 9 points have a decreasing alpha\n",
+    "            for i, (index, row) in enumerate(float_data.iterrows()):\n",
+    "                alpha = alphas[i] if i < 9 else 0.1\n",
+    "                rgba_color_with_alpha = (*rgba_color[:3], alpha)\n",
+    "                marker_edge_color     = (*rgba_color[:3], alpha)  # Marker edge color follows opacity gradient\n",
+    "                ax.scatter(row['LONGITUDE'], row['LATITUDE'], color=rgba_color_with_alpha, edgecolor=marker_edge_color, transform=ccrs.PlateCarree(), zorder=3)\n",
+    "\n",
+    "                if i > 0:\n",
+    "                    prev_row = float_data.iloc[i - 1]\n",
+    "                    ax.plot([prev_row['LONGITUDE'], row['LONGITUDE']],\n",
+    "                            [prev_row['LATITUDE'], row['LATITUDE']],\n",
+    "                            color=rgba_color_with_alpha, transform=ccrs.PlateCarree(), zorder=2)\n",
+    "                    \n",
+    "            # Create a proxy artist for each float\n",
+    "            proxy = plt.Line2D([0], [0], linestyle='-', marker='o', color=float_colors.get(float_name, '#000000'), label=float_name)\n",
+    "            legend_handles.append(proxy)\n",
     "        \n",
     "        # Add legend to the plot\n",
     "        ax.legend(handles=legend_handles, loc='upper right')\n",
