--- a/Python_notebooks/navis_float_ftp_download.ipynb
+++ b/Python_notebooks/navis_float_ftp_download.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,353 +23,17 @@
     "transport = paramiko.Transport((host,port))\n",
     "\n",
     "# Auth\n",
-    "username,password = \"s_f1102\",\"hckrJHGY\"\n",
+    "#username,password = \"s_f1102\",\"hckrJHGY\"\n",
+    "username,password = \"s_f1101\",\"KhuBGFTj\"\n",
     "transport.connect(None,username,password)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files in /:\n",
-      "1102.043.isus\n",
-      "1102.2207170118\n",
-      "1102.020.msg\n",
-      "1102.089.msg\n",
-      "1102.087.isus\n",
-      "1102.080.log\n",
-      "1102.010.msg\n",
-      "1102.009.isus\n",
-      "1102.088.isus\n",
-      "1102.063.isus\n",
-      "1102.023.msg\n",
-      "1102.013.msg\n",
-      "1102.2206211049\n",
-      "1102.009.log\n",
-      "backups\n",
-      "1102.046.log\n",
-      "1102.003.msg\n",
-      "1102.060.msg\n",
-      "1102.086.isus\n",
-      "1102.2207170139\n",
-      "1102.042.isus\n",
-      "1102.083.isus\n",
-      "1102.012.log\n",
-      "1102.024.isus\n",
-      "1102.048.msg\n",
-      "1102.052.log\n",
-      "1102.090.msg\n",
-      "1102.088.log\n",
-      "1102.2207170158.log\n",
-      "1102.027.log\n",
-      "1102.084.log\n",
-      "1102.075.isus\n",
-      "1102.047.log\n",
-      "1102.045.isus\n",
-      "1102.068.msg\n",
-      "1102.089.isus\n",
-      "1102.057.isus\n",
-      "1102.070.log\n",
-      "1102.049.msg\n",
-      "1102.076.msg\n",
-      "1102.064.isus\n",
-      "1102.041.log\n",
-      "1102.001.isus\n",
-      "1102.2207170038\n",
-      "1102.2207162228\n",
-      "1102.2207170158\n",
-      ".MakeCmd\n",
-      "1102.2206160929\n",
-      "1102.2207162330.log\n",
-      "1102.2206211123\n",
-      "1102.050.isus\n",
-      "1102.024.log\n",
-      "1102.053.log\n",
-      "1102.078.msg\n",
-      "1102.005.msg\n",
-      ".bash_logout\n",
-      "1102.2207170038.log\n",
-      "1102.019.log\n",
-      "1102.2207162356.log\n",
-      "1102.017.msg\n",
-      "1102.007.log\n",
-      "1102.014.isus\n",
-      "1102.042.msg\n",
-      "1102.058.isus\n",
-      "1102.017.log\n",
-      "1102.043.msg\n",
-      "1102.073.msg\n",
-      "1102.067.isus\n",
-      "1102.037.log\n",
-      "1102.018.log\n",
-      "1102.039.msg\n",
-      "1102.2207170017\n",
-      "1102.003.isus\n",
-      "1102.031.isus\n",
-      "1102.010.isus\n",
-      "1102.006.log\n",
-      "1102.011.isus\n",
-      ".sxrc\n",
-      "1102.065.msg\n",
-      "1102.072.msg\n",
-      "1102.077.isus\n",
-      "1102.035.log\n",
-      "1102.016.isus\n",
-      "1102.091.msg\n",
-      "1102.006.msg\n",
-      "1102.007.isus\n",
-      "1102.040.log\n",
-      "1102.086.msg\n",
-      "1102.092.msg\n",
-      "1102.091.log\n",
-      "1102.000.msg\n",
-      ".history\n",
-      "1102.2206211049.log\n",
-      "1102.013.isus\n",
-      "1102.050.msg\n",
-      "1102.044.isus\n",
-      "1102.037.msg\n",
-      "1102.035.msg\n",
-      "1102.040.msg\n",
-      "mission.cfg_2022_01_31\n",
-      "1102.028.isus\n",
-      "1102.018.isus\n",
-      "1102.092.isus\n",
-      "1102.027.msg\n",
-      "1102.2207170118.log\n",
-      ".bash_profile\n",
-      "1102.063.log\n",
-      "1102.056.msg\n",
-      "1102.067.msg\n",
-      "1102.2206281303.log\n",
-      "1102.062.isus\n",
-      "1102.084.isus\n",
-      "1102.019.msg\n",
-      "mission160223.cfg\n",
-      "mission.cfg_2022_07_27\n",
-      "1102.021.msg\n",
-      "1102.032.msg\n",
-      "1102.2207162246\n",
-      "1102.040.isus\n",
-      "1102.049.log.tmp\n",
-      "logs\n",
-      "1102.061.msg\n",
-      "1102.025.log\n",
-      "1102.014.msg\n",
-      "mission060922.cfg\n",
-      "1102.055.log\n",
-      "1102.058.log\n",
-      "1102.048.log\n",
-      "1102.092.log\n",
-      "1102.038.msg\n",
-      ".rxrc\n",
-      "1102.082.isus\n",
-      "1102.028.log\n",
-      "1102.052.msg\n",
-      "1102.076.isus\n",
-      "1102.074.log\n",
-      "1102.2207162330\n",
-      "1102.030.isus\n",
-      "1102.000.log\n",
-      "1102.064.msg\n",
-      "1102.051.msg\n",
-      "1102.2206210845\n",
-      "1102.003.log\n",
-      "1102.011.log\n",
-      "1102.042.log\n",
-      "1102.2206210845.log\n",
-      "1102.057.msg\n",
-      "1102.051.isus\n",
-      "1102.075.msg\n",
-      "1102.051.log\n",
-      "1102.081.isus\n",
-      "1102.075.log\n",
-      "1102.068.log\n",
-      "1102.047.msg\n",
-      "1102.023.isus\n",
-      "1102.049.isus\n",
-      "1102.2207170017.log\n",
-      "1102.065.isus\n",
-      "1102.009.msg\n",
-      "1102.012.msg\n",
-      "1102.014.log\n",
-      "1102.004.log\n",
-      "1102.033.log\n",
-      "1102.065.log\n",
-      "1102.053.msg\n",
-      "1102.082.log\n",
-      "1102.044.log\n",
-      "1102.078.isus\n",
-      "1102.002.log\n",
-      "1102.031.msg\n",
-      "1102.017.isus\n",
-      "1102.066.isus\n",
-      "1102.071.log\n",
-      "1102.029.log\n",
-      "1102.015.log\n",
-      ".logout\n",
-      "1102.080.msg\n",
-      "1102.074.msg\n",
-      "1102.085.isus\n",
-      "1102.012.isus\n",
-      "1102.062.log\n",
-      "1102.070.msg\n",
-      "1102.059.log\n",
-      "1102.043.log\n",
-      "1102.054.isus\n",
-      "1102.059.isus\n",
-      "1102.056.isus\n",
-      "1102.072.isus\n",
-      "1102.083.log\n",
-      "1102.008.msg\n",
-      "1102.001.log\n",
-      "1102.041.msg\n",
-      "1102.034.msg\n",
-      "1102.046.msg\n",
-      "1102.053.isus\n",
-      "1102.081.log\n",
-      "1102.020.log\n",
-      "1102.016.msg\n",
-      "1102.021.log\n",
-      "1102.2207162356\n",
-      "1102.045.log\n",
-      "1102.091.isus\n",
-      "1102.080.isus\n",
-      "1102.074.isus\n",
-      "1102.2206281259\n",
-      "1102.071.isus\n",
-      "1102.090.log\n",
-      "1102.072.log\n",
-      "1102.2207162228.log\n",
-      "1102.038.isus\n",
-      "1102.2206281223\n",
-      "1102.033.msg\n",
-      "1102.022.log\n",
-      "1102.078.log\n",
-      "1102.024.msg\n",
-      "1102.015.msg\n",
-      "1102.022.msg\n",
-      "1102.007.msg\n",
-      "1102.025.isus\n",
-      ".cshrc\n",
-      "1102.069.msg\n",
-      "1102.077.log\n",
-      "1102.068.isus\n",
-      "1102.2206281303\n",
-      "1102.063.msg\n",
-      "1102.062.msg\n",
-      "1102.021.isus\n",
-      "1102.059.msg\n",
-      "1102.036.log\n",
-      "1102.036.msg\n",
-      "1102.001.msg\n",
-      "1102.073.isus\n",
-      "1102.079.isus\n",
-      "1102.069.log\n",
-      "1102.044.msg\n",
-      "1102.002.isus\n",
-      "1102.010.log\n",
-      "1102.071.msg\n",
-      "1102.005.isus\n",
-      "1102.025.msg\n",
-      "1102.033.isus\n",
-      "1102.005.log\n",
-      "1102.061.log\n",
-      "1102.058.msg\n",
-      "1102.026.isus\n",
-      "1102.004.msg\n",
-      "1102.023.log\n",
-      "1102.2206211123.log\n",
-      "1102.013.log\n",
-      "1102.070.isus\n",
-      "1102.2206281153.log\n",
-      "1102.027.isus\n",
-      "1102.050.log\n",
-      "1102.2206281223.log\n",
-      "1102.026.log\n",
-      "1102.2207162246.log\n",
-      ".bashrc\n",
-      "1102.066.msg\n",
-      "1102.004.isus\n",
-      "1102.087.log\n",
-      "1102.011.msg\n",
-      "1102.2206160929.log\n",
-      "1102.045.msg\n",
-      "1102.030.msg\n",
-      "1102.032.isus\n",
-      "1102.061.isus\n",
-      "1102.035.isus\n",
-      "1102.056.log\n",
-      "1102.084.msg\n",
-      "1102.055.msg\n",
-      "1102.064.log\n",
-      "1102.028.msg\n",
-      "1102.2207170058\n",
-      "1102.032.log\n",
-      "1102.067.log.tmp\n",
-      "1102.006.isus\n",
-      "1102.029.msg\n",
-      "1102.088.msg\n",
-      "1102.2207170058.log\n",
-      "1102.085.log\n",
-      "1102.076.log\n",
-      "1102.020.isus\n",
-      "1102.054.log\n",
-      "1102.060.isus\n",
-      "1102.038.log.tmp\n",
-      "1102.019.isus\n",
-      "1102.073.log\n",
-      "1102.034.log\n",
-      "1102.085.msg\n",
-      "1102.087.msg\n",
-      "1102.036.isus\n",
-      "1102.090.isus\n",
-      "1102.002.msg\n",
-      "1102.039.log\n",
-      "1102.2206281153\n",
-      "1102.041.isus\n",
-      "1102.008.isus\n",
-      "1102.079.log\n",
-      "1102.079.msg\n",
-      "1102.082.msg\n",
-      "1102.018.msg\n",
-      "1102.015.isus\n",
-      "1102.069.isus\n",
-      "1102.016.log\n",
-      "1102.034.isus\n",
-      "1102.022.isus\n",
-      "1102.039.isus\n",
-      "1102.037.isus\n",
-      "1102.060.log\n",
-      "1102.008.log\n",
-      "1102.026.msg\n",
-      "1102.086.log\n",
-      "1102.066.log\n",
-      "1102.2207170139.log\n",
-      "1102.083.msg\n",
-      "1102.048.isus\n",
-      "1102.055.isus\n",
-      "1102.089.log\n",
-      "1102.046.isus\n",
-      "1102.052.isus\n",
-      "1102.031.log\n",
-      "1102.029.isus\n",
-      "1102.047.isus\n",
-      "1102.081.msg\n",
-      "1102.030.log\n",
-      "1102.054.msg\n",
-      "1102.057.log\n",
-      "1102.077.msg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "\n",
     "# Create an SFTP session\n",
     "sftp = paramiko.SFTPClient.from_transport(transport)\n",
@@ -386,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,26 +58,14 @@
     "data_dir      = os.path.join(parent_dir, 'Data')\n",
     "navis_dir = os.path.join(data_dir, 'navis')\n",
     "navis_101 = os.path.join(navis_dir, 'navis_101')\n",
-    "navis_102 = os.path.join(navis_dir, 'navis_102')\n"
+    "navis_102 = os.path.join(navis_dir, 'navis_102')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'navis_dir' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[43mnavis_dir\u001b[49m):\n\u001b[0;32m      2\u001b[0m     os\u001b[38;5;241m.\u001b[39mmakedirs(navis_dir)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(navis_101):\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'navis_dir' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.exists(navis_dir):\n",
     "    os.makedirs(navis_dir)\n",
@@ -425,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 93/93 [00:22<00:00,  4.07it/s]"
+      "100%|██████████| 89/89 [00:20<00:00,  4.28it/s]"
      ]
     },
     {
@@ -454,7 +106,7 @@
     "msg_files = [file for file in files if file.endswith('.msg')]\n",
     "# Download each .msg file\n",
     "for msg_file in tqdm(msg_files):\n",
-    "    local_path = os.path.join(navis_102, msg_file)\n",
+    "    local_path = os.path.join(navis_101, msg_file)\n",
     "    remote_path = os.path.join(directory, msg_file)\n",
     "    \n",
     "    sftp.get(remote_path, local_path)\n",
@@ -464,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
