Minor changes. Update to realtime positions

--- a/Python_notebooks/BGC_ARGO_Float_download.ipynb
+++ b/Python_notebooks/BGC_ARGO_Float_download.ipynb
@@ -83,6 +83,7 @@
       "1101.2207250055.log\n",
       "1101.042.log\n",
       "1101.050.isus\n",
+      "1101.090.log\n",
       "1101.052.msg\n",
       "1101.030.isus\n",
       "1101.000.msg\n",
@@ -140,6 +141,7 @@
       "1101.023.log\n",
       "1101.031.isus\n",
       ".bash_profile\n",
+      "1101.090.isus\n",
       "1101.020.msg\n",
       "1101.2204270946\n",
       "1101.007.log\n",
@@ -247,6 +249,7 @@
       "1101.068.log\n",
       "1101.027.log\n",
       "1101.2207250401\n",
+      "1101.090.msg\n",
       "1101.2206161208.log\n",
       "1101.082.isus\n",
       "1101.020.isus\n",
@@ -380,7 +383,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90/90 [00:25<00:00,  3.46it/s]\n"
+      "100%|██████████| 91/91 [00:44<00:00,  2.05it/s]\n"
      ]
     },
     {
@@ -462,6 +465,7 @@
       "1102.067.isus\n",
       "1102.037.log\n",
       "1102.018.log\n",
+      "1102.095.log\n",
       "1102.039.msg\n",
       "1102.2207170017\n",
       "1102.003.isus\n",
@@ -501,6 +505,7 @@
       "1102.063.log\n",
       "1102.056.msg\n",
       "1102.067.msg\n",
+      "1102.095.isus\n",
       "1102.2206281303.log\n",
       "1102.062.isus\n",
       "1102.084.isus\n",
@@ -561,6 +566,7 @@
       "1102.053.msg\n",
       "1102.082.log\n",
       "1102.044.log\n",
+      "1102.095.msg\n",
       "1102.078.isus\n",
       "1102.002.log\n",
       "1102.031.msg\n",
@@ -731,7 +737,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 95/95 [00:27<00:00,  3.44it/s]"
+      "100%|██████████| 96/96 [00:43<00:00,  2.20it/s]"
      ]
     },
     {
@@ -761,9 +767,6 @@
     "username_list = ['s_f1101','s_f1102']\n",
     "password_list = [\"KhuBGFTj\",\"hckrJHGY\"]\n",
     "directory_list = [navis_101, navis_102]\n",
-    "\n",
-    "#username,password = \"s_f1102\",\"hckrJHGY\"\n",
-    "#username,password = \"s_f1101\",\"KhuBGFTj\"\n",
     "\n",
     "for username, password, out_dir in zip(username_list, password_list, directory_list):\n",
     "    \n",
@@ -800,16 +803,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2023-05-07 07:30:52.000794624\n",
+      "1    2023-05-17 04:56:51.000510464\n",
+      "2    2023-05-27 02:10:14.000229376\n",
+      "3    2023-06-05 23:48:13.002537472\n",
+      "4    2023-06-15 20:47:59.002213888\n",
+      "5    2023-06-25 18:05:52.001938432\n",
+      "6    2023-07-05 15:24:51.001644032\n",
+      "7    2023-07-15 15:13:08.001628160\n",
+      "8    2023-07-25 14:32:29.001548288\n",
+      "9    2023-08-04 13:47:56.001462784\n",
+      "10   2023-08-14 13:27:13.001434112\n",
+      "11   2023-08-24 10:41:40.001132544\n",
+      "12   2023-09-03 07:57:23.000834048\n",
+      "13   2023-09-13 06:06:02.000652288\n",
+      "14   2023-09-23 06:23:46.000677376\n",
+      "15   2023-10-03 04:46:04.000496128\n",
+      "16   2023-10-13 02:05:46.000221696\n",
+      "17   2023-10-23 00:04:54.000005632\n",
+      "18   2023-11-01 21:27:41.002292224\n",
+      "19   2023-11-11 21:06:30.002262016\n",
+      "20   2023-11-21 22:03:41.002364416\n",
+      "21   2023-12-02 00:09:26.000012800\n",
+      "22   2023-12-11 21:34:13.002302464\n",
+      "23   2023-12-21 18:51:03.002005504\n",
+      "24   2023-12-31 16:50:41.001788928\n",
+      "25   2024-01-10 14:21:20.001532416\n",
+      "26   2024-01-20 12:47:22.001355776\n",
+      "27   2024-01-30 12:51:55.001361408\n",
+      "28   2024-02-09 11:05:25.001187328\n",
+      "29   2024-02-19 11:12:23.001197568\n",
+      "30   2024-02-29 09:33:33.001013248\n",
+      "31   2024-03-20 09:13:19.000984576\n",
+      "32   2024-03-30 10:07:43.001082880\n",
+      "33   2024-04-09 09:31:39.001010688\n",
+      "34   2024-04-19 08:35:43.000909312\n",
+      "35   2024-04-29 07:39:13.000807424\n",
+      "36   2024-05-09 06:13:48.000662528\n",
+      "37   2024-05-19 03:30:37.000365056\n",
+      "38   2024-05-29 00:37:19.000053760\n",
+      "39   2024-06-07 22:00:42.002360320\n",
+      "Name: JULD, dtype: datetime64[ns]\n",
+      "0    2023-06-19 21:24:08.000001536\n",
+      "1    2023-06-20 14:53:21.999997952\n",
+      "2    2023-06-20 15:49:36.999996416\n",
+      "3    2023-06-21 09:20:51.000007680\n",
+      "4    2023-06-21 10:22:20.973590016\n",
+      "5    2023-06-22 03:47:34.029490688\n",
+      "6    2023-06-23 11:31:22.983441408\n",
+      "7    2023-06-26 10:26:05.007869952\n",
+      "8    2023-06-29 10:26:05.007883264\n",
+      "9    2023-07-02 12:18:04.015697408\n",
+      "10   2023-07-05 12:24:05.007753728\n",
+      "11   2023-07-08 12:28:05.007700480\n",
+      "12   2023-07-11 12:30:06.007712256\n",
+      "13   2023-07-14 12:28:06.007929344\n",
+      "14   2023-07-17 12:24:06.999994368\n",
+      "15   2023-07-20 12:24:06.007617024\n",
+      "16   2023-07-23 12:26:06.008079360\n",
+      "17   2023-07-26 12:26:05.007702528\n",
+      "18   2023-07-29 12:24:05.007616000\n",
+      "19   2023-08-01 12:22:05.007527424\n",
+      "20   2023-08-11 12:18:01.014770688\n",
+      "21   2023-08-21 12:14:03.009136128\n",
+      "22   2023-08-31 12:28:01.013916672\n",
+      "23   2023-09-10 12:10:00.013597696\n",
+      "24   2023-09-20 12:26:01.013920256\n",
+      "25   2023-09-30 12:23:59.016468992\n",
+      "26   2023-10-10 12:26:02.011649536\n",
+      "27   2023-10-20 12:24:01.013981696\n",
+      "28   2023-10-30 12:24:01.013813248\n",
+      "29   2023-11-09 12:21:59.017093632\n",
+      "30   2023-11-11 01:21:22.000007680\n",
+      "31   2023-11-20 12:26:00.017507328\n",
+      "32   2023-11-30 12:24:01.011647488\n",
+      "33   2023-12-10 12:20:00.014357504\n",
+      "34   2023-12-20 12:10:00.016301568\n",
+      "35   2023-12-30 12:16:00.016983552\n",
+      "36   2024-01-09 12:21:59.017190912\n",
+      "37   2024-01-19 12:24:00.016798720\n",
+      "38   2024-01-29 12:23:58.018674176\n",
+      "39   2024-02-08 12:16:00.016777728\n",
+      "40   2024-02-18 12:22:01.014595584\n",
+      "41   2024-02-28 03:57:45.017177088\n",
+      "42   2024-03-08 10:01:41.015605760\n",
+      "43   2024-03-17 06:55:31.015987200\n",
+      "44   2024-03-26 04:58:24.014817792\n",
+      "45   2024-03-31 13:27:17.008224768\n",
+      "46   2024-04-05 13:27:15.013304832\n",
+      "47   2024-04-10 13:27:16.008705024\n",
+      "48   2024-04-15 13:21:16.008866304\n",
+      "49   2024-04-20 13:27:16.008936960\n",
+      "50   2024-04-25 13:25:17.008905216\n",
+      "51   2024-04-30 13:31:16.008844288\n",
+      "52   2024-05-05 13:25:17.008790016\n",
+      "53   2024-05-10 13:29:16.008712192\n",
+      "54   2024-05-15 13:09:16.012721152\n",
+      "55   2024-05-20 13:27:17.008475136\n",
+      "56   2024-05-25 13:23:15.013746176\n",
+      "57   2024-05-30 13:27:18.004340224\n",
+      "58   2024-06-04 13:29:15.013093376\n",
+      "59   2024-06-09 13:19:18.004209664\n",
+      "Name: JULD, dtype: datetime64[ns]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_14716\\3025249952.py:32: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\2680373930.py:35: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  last_position_df = pd.concat([last_position_df, last_temp_df], ignore_index=True)\n",
-      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_14716\\3025249952.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\2680373930.py:36: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  position_df = pd.concat([position_df, temp_df], ignore_index=True)\n"
      ]
     }
@@ -836,6 +947,9 @@
     "    filename = floats_dir + '/' + i.rsplit('/', 1)[1]\n",
     "    floats_filenames.append(filename)\n",
     "\n",
+    "for url, filename in zip(floats_url, floats_filenames):\n",
+    "    urlretrieve(url, filename)\n",
+    "\n",
     "position_df = pd.DataFrame({'PROF_NUM' : str(), 'LONGITUDE' : [], 'LATITUDE' : [], 'float' : int()})\n",
     "last_position_df = pd.DataFrame({'PROF_NUM' : str(), 'LONGITUDE' : [], 'LATITUDE' : [], 'float' : int()})\n",
     "\n",
@@ -845,7 +959,7 @@
     "    temp_df = dat[['LONGITUDE', 'LATITUDE', 'JULD']].to_dataframe().reset_index()\n",
     "    temp_df['float'] = wmo\n",
     "    last_temp_df = temp_df[temp_df['JULD'] == max(temp_df['JULD'])]\n",
-    "\n",
+    "    print(temp_df['JULD'])\n",
     "    last_position_df = pd.concat([last_position_df, last_temp_df], ignore_index=True)\n",
     "    position_df = pd.concat([position_df, temp_df], ignore_index=True)\n",
     "    dat.close()"
@@ -853,19 +967,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/88 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_14716\\1523172333.py:48: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  0%|          | 0/88 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\1523172333.py:48: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  compiled_101 = pd.concat([compiled_101, temp_df], ignore_index= True)\n",
-      "100%|██████████| 88/88 [00:01<00:00, 77.00it/s]\n",
-      "  0%|          | 0/93 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_14716\\1523172333.py:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "100%|██████████| 88/88 [00:00<00:00, 109.17it/s]\n",
+      "  0%|          | 0/93 [00:00<?, ?it/s]C:\\Users\\hanshil\\AppData\\Local\\Temp\\ipykernel_28104\\1523172333.py:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  compiled_102 = pd.concat([compiled_102, temp_df], ignore_index= True)\n",
-      "100%|██████████| 93/93 [00:01<00:00, 76.30it/s]\n"
+      "100%|██████████| 93/93 [00:00<00:00, 110.42it/s]\n"
      ]
     }
    ],
@@ -954,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
